--- a/src/templates/leftsidebar.hbs
+++ b/src/templates/leftsidebar.hbs
@@ -1,8 +1,8 @@
 <div class="sidebar-tabs">
   <ul role="tablist">
-    <li class="disabled"><a href="#wikipediadocpane" role="tab"><i class="fa fa-wikipedia-w"></i></a></li>
-    <li class="disabled"><a href="#osmwikipane" role="tab"><i class="fa fa-search"></i></a></li>
-    <li class="disabled"><a href="#wikidatapane" role="tab"><i class="fa fa-table"></i></a></li>
+    <li class="disabled" title="{{ t 'home.panels.wikipediadoc.title' }}"><a href="#wikipediadocpane" role="tab"><i class="fa fa-wikipedia-w"></i></a></li>
+    <li class="disabled" title="{{ t 'home.panels.osmwiki.title' }}"><a href="#osmwikipane" role="tab"><i class="fa fa-search"></i></a></li>
+    <li class="disabled" title="{{ t 'home.panels.wikidata.title' }}"><a href="#wikidatapane" role="tab"><i class="fa fa-table"></i></a></li>
   </ul>
 </div>
 <!-- Tab panes -->
