Updated info pane with more info

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,14 +16,14 @@ body {
   width: 60%;
   background-color: #000;
   opacity: .5;
-   margin: 0 auto;
-margin-top: 100px;
-   border-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
-     padding: 30px;
+  margin: 0 auto;
+  margin-top: 100px;
+  border-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
+  padding: 30px;
 }
 
 #browsersupport #text {
@@ -36,13 +36,32 @@ margin-top: 100px;
 #browsersupport #button {
   text-align: center;
 }
+
 #browsersupport button {
-display: block;
+  display: block;
   width: 90%;
   margin: 20px;
   padding: 4px;
   margin: 0 auto;
 }
+
+#home {
+  padding-top: 50px;
+}
+
+#home .fa {
+  position: absolute;
+  left: 20px;
+}
+
+#home ul {
+  list-style: none;
+  line-height: 1.5em;
+}
+
+#home li {
+}
+
 #sceneswitcher #currentscene {
   min-height: 200px;
 }
@@ -204,8 +223,11 @@ display: block;
 }
 
 .osmlabel.valuelabel {
-  display: inline-block;
   clear: both;
+}
+
+#info .osmlabel.valuelabel {
+  display: inline-block;
 }
 
 .osmlabel.keylabel {
