--- a/src/templates/osminfobox.hbs
+++ b/src/templates/osminfobox.hbs
@@ -5,7 +5,7 @@
 {{#if key.name }}
 <h2>
 {{/if}}
-{{>templates/osmlabel item=this class='keylabel' key=key}}
+{{> osmlabel item=this class='keylabel' key=key}}
 </td><td>
 <span class="osmlabel valuelabel {{ key }}">{{t ./value/displayname}}
   <span class="icons">
