--- a/src/templates/TOMLocationsPanel.hbs
+++ b/src/templates/TOMLocationsPanel.hbs
@@ -1,13 +1,14 @@
 {{#each locationsList}}
-{{#if @first}}
-<table>
-  <th>{{ t 'home.panels.locations.pane' }}</th>
-{{/if}}
-<tr><td class="marker" data-lat="{{ lat }}" data-lon="{{ lon }}" data-zoom="{{ zoom }}">
-{{t title}} <i class="fa fa-map-marker"></i>
-</td>
-</tr>
-{{#if @last}}
-</table>
-{{/if}}
+  {{#if @first}}
+    <table>
+      <th>{{ t 'home.panels.locations.pane' }}</th>
+  {{/if}}
+  <tr>
+    <td class="marker" data-lat="{{ lat }}" data-lon="{{ lon }}" data-zoom="{{ zoom }}">
+      {{t title}} <i class="fa fa-map-marker"></i>
+    </td>
+  </tr>
+  {{#if @last}}
+    </table>
+  {{/if}}
 {{/each}}
